# Predictions_Latest

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
backend/: Prediction_Latest.py  Prediction_Parquet.py  alerts_check_cleaned.py  classes.py  config.py  predictions.py  requirements.txt  test.ipynb
backend/parquetConversion/: csv_to_parquet.py
frontend/: columns.ipynb  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css_.css  types.ts
frontend/src/components/: AttendanceHistory.tsx  AttendanceMetrics.tsx  AttendanceTrend.tsx  RiskIndicator.tsx  StudentSelector.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: axios.ts
frontend/src/pages/: AlertsDashboard.tsx  AlertsDashboard1234.tsx  DownloadButton.tsx  Index.tsx
frontend/src/services/: alerts.service.ts  api.service.ts  prediction.service.ts
