[project]
name = "aip-cad-alerts-dashboards-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "joblib>=1.5.1",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "orjson>=3.10.18",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.0",
    "snappy>=3.2",
    "typing>=3.10.0.0",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.2",
    "xlrd>=2.0.2",
]
